--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -163,9 +163,9 @@
       "     */\n",
       "    /*\n",
       "     *  Original SymPy expression:\n",
-      "     *  \"out_gf[IDX2(OUTPUTGF, i0)] = a*phi_dDD00\"\n",
+      "     *  \"out_gf[IDX2(OUTPUTGF, i0)] = phi_dDD00\"\n",
       "     */\n",
-      "    out_gf[IDX2(OUTPUTGF, i0)] = a*phi_dDD00;\n",
+      "    out_gf[IDX2(OUTPUTGF, i0)] = phi_dDD00;\n",
       "}\n",
       "\n"
      ]
@@ -187,10 +187,8 @@
     "# Declare phi_dDD as a rank-2 indexed expression: phi_dDD[i][j] = \\partial_i \\partial_j phi\n",
     "phi_dDD = ixp.declarerank2(\"phi_dDD\",\"nosym\")\n",
     "\n",
-    "a = par.Cparameters(\"REAL\",\"blah\",\"a\")\n",
-    "\n",
     "# Set output to \\partial_0^2 phi\n",
-    "output = a*phi_dDD[0][0]\n",
+    "output = phi_dDD[0][0]\n",
     "\n",
     "# Output to the screen the core C code for evaluating the finite difference derivative\n",
     "fin.FD_outputC(\"stdout\",lhrh(lhs=gri.gfaccess(\"out_gf\",\"output\"),rhs=output))"
