--- a/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
@@ -108,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting IDScalarWaveNRPy/src/InitialData.c\n"
+      "Writing IDScalarWaveNRPy/src/InitialData.c\n"
      ]
     }
    ],
@@ -163,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting IDScalarWaveNRPy/interface.ccl\n"
+      "Writing IDScalarWaveNRPy/interface.ccl\n"
      ]
     }
    ],
@@ -189,7 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting IDScalarWaveNRPy/param.ccl\n"
+      "Writing IDScalarWaveNRPy/param.ccl\n"
      ]
     }
    ],
@@ -246,7 +246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting IDScalarWaveNRPy/schedule.ccl\n"
+      "Writing IDScalarWaveNRPy/schedule.ccl\n"
      ]
     }
    ],
@@ -289,7 +289,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting IDScalarWaveNRPy/src/make.code.defn\n"
+      "Writing IDScalarWaveNRPy/src/make.code.defn\n"
      ]
     }
    ],
@@ -315,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
