--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -38,13 +38,17 @@
     "+ [Finite Difference Derivatives](Tutorial-Finite_Difference_Derivatives.ipynb)\n",
     "    + Instructional module: [How NRPy+ Computes Finite Difference Derivative Coefficients](Tutorial-How_NRPy_Computes_Finite_Difference_Coeffs.ipynb)\n",
     "    + Start-to-Finish Example: [Finite-Difference Playground: A Complete C Code for Analyzing NRPy+-Based Finite Differences](Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb)\n",
-    "+ Application: [The Scalar Wave Equation in Cartesian Coordinates, with Plane-Wave Initial Data](Tutorial-ScalarWave.ipynb)\n",
+    "+ Application: [The Scalar **Wave Equation** in Cartesian Coordinates, with Plane-Wave Initial Data](Tutorial-ScalarWave.ipynb)\n",
     "    + Solving the Wave Equation with the <font color='green'>**Einstein Toolkit**</font> (*Courtesy Patrick Nelson*)\n",
     "        + [<font color='green'>**IDScalarWaveNRPy**</font>: Plane-wave initial data module for the scalar wave equation](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb) \n",
     "        + [<font color='green'>**WaveToyNRPy**</font>: Solving the scalar wave equation, using the method of lines](Tutorial-ETK_thorn-WaveToyNRPy.ipynb)\n",
     "\n",
-    "+ Application: [The Weyl Scalars and Invariants in Cartesian Coordinates](Tutorial-WeylScalarsInvariants-Cartesian.ipynb) (*Courtesy Patrick Nelson*)\n",
+    "+ Application: [The **Weyl Scalars and Invariants** in Cartesian Coordinates](Tutorial-WeylScalarsInvariants-Cartesian.ipynb) (*Courtesy Patrick Nelson*)\n",
     "    + [<font color='green'>**WeylScal4NRPy**</font>: An <font color='green'>**Einstein Toolkit**</font> Diagnostic Thorn](Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb) (*Courtesy Patrick Nelson*)\n",
+    "+ Application (in progress): [Two Vector-Potential Formulations of **Maxwell's Equations** in Cartesian Coordinates](Tutorial-MaxwellCartesian.ipynb). (Formulations based on [Illustrating Stability Properties of Numerical Relativity in Electrodynamics](https://arxiv.org/abs/gr-qc/0201051) by Knapp, Walker, and Baumgarte.) (*Courtesy Patrick Nelson*)\n",
+    "    + [<font color='green'>**IDMaxwellNRPy**</font>: An <font color='green'>**Einstein Toolkit**</font> initial data thorn for Maxwell's equations](Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb)\n",
+    "    + [<font color='green'>**MaxwellEvol**</font>: Solving Maxwell's equations in the <font color='green'>**Einstein Toolkit**</font> using the method of lines](Tutorial-ETK_thorn-MaxwellEvol.ipynb)\n",
+    "\n",
     "\n",
     "#### (READ SECOND, IN ORDER) Reference Metrics and the Scalar Wave Equation in Curvilinear Coordinates\n",
     "+ [Moving beyond Cartesian Grids: Reference Metrics](Tutorial-Reference_Metric.ipynb)\n",
