--- a/Tutorial-GRMHD_UnitConversion.ipynb
+++ b/Tutorial-GRMHD_UnitConversion.ipynb
@@ -5,8 +5,12 @@
    "metadata": {},
    "source": [
     "# Code and Physical Units\n",
+    "\n",
+    "## GRMHD Units in terms of EOS \n",
+    "\n",
     "$\\newcommand{\\rhoCode}{{\\tilde{\\rho}}}$\n",
-    "$\\newcommand{\\MCode}{{\\tilde{M}}}$ $\\newcommand{\\rCode}{{\\tilde{r}}}$ $\\newcommand{\\PCode}{{\\tilde{P}}}$$\\newcommand{\\tCode}{{\\tilde{t}}}$\n",
+    "$\\newcommand{\\MCode}{{\\tilde{M}}}$ $\\newcommand{\\rCode}{{\\tilde{r}}}$ $\\newcommand{\\PCode}{{\\tilde{P}}}$$\\newcommand{\\tCode}{{\\tilde{t}}}$$\\newcommand{\\Mfid}{{M_{\\rm fid}}}$$\\newcommand{\\MfidBar}{\\bar{M}_{\\rm fid}}$$\\newcommand{\\Mbar}{\\bar{M}}$\n",
+    "$\\newcommand{\\rBar}{\\bar{r}}$$\\newcommand{\\tBar}{\\bar{t}}$\n",
     "In GRMHD, we can set an equation of state of the form\n",
     "\\begin{equation}\n",
     "P = K\\rho^{1+1/n}\n",
@@ -33,8 +37,28 @@
     "where $r_0 = c^{n+1}/\\sqrt{G}K^{n/2}$.  Then\n",
     "\\begin{eqnarray}\n",
     "\\tCode &=& \\frac{t}{t_0} = \\frac{t}{r_0/c} = \\frac{\\sqrt{G}K^{n/2}}{c^n} t \\\\\n",
-    "\\MCode &=& \\frac{M}{M_0} = \\frac{M}{\\rho_0 r_0^3} = M\\frac{c^{2n}}{K^n}\\frac{G^{3/2}K^{3n/2}}{c^{3(n+1)}} = \\frac{G^{3/2}K^{n/2}}{c^{n+3}} M\n",
-    "\\end{eqnarray}\n"
+    "\\MCode &=& \\frac{M}{M_0} = \\frac{M}{\\rho_0 r_0^3} = M\\frac{c^{2n}}{K^n}\\frac{G^{3/2}K^{3n/2}}{c^{3(n+1)}} = \\frac{G^{3/2}K^{n/2}}{c^{n+3}} M,\n",
+    "\\end{eqnarray}\n",
+    "Hence, we have \n",
+    "\\begin{eqnarray}\n",
+    "\\rho_0 &=& \\left(\\frac{K}{c^2}\\right)^n\\\\\n",
+    "r_0 &=& \\frac{c^{n+1}}{\\sqrt{G}K^{n/2}}\\\\\n",
+    "t_0 &=& \\frac{c^{n}}{\\sqrt{G}K^{n/2}}\\\\\n",
+    "M_0 &=& \\frac{c^{n+3}}{G^{3/2}K^{n/2}}\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "## Mapping to SENR or any NR code\n",
+    "\n",
+    "So we will need a $\\Mfid$ which is define such that the (SENR) code units $\\MfidBar = 1$ or in other words in SENR codes units: \n",
+    "\\begin{equation}\n",
+    "\\Mbar = \\frac{M}{\\Mfid}\n",
+    "\\end{equation}\n",
+    "In these units:\n",
+    "\\begin{eqnarray}\n",
+    "\\rBar &=& \\frac{c^2}{G\\Mfid} r\\\\\n",
+    "\\tBar &=& \\frac{c^3}{G\\Mfid} t\n",
+    "\\end{eqnarray}\n",
+    "At some level $\\Mfid$ is arbitrary, so we can select $M_0 = \\Mfid$.  In this case, this means that $\\rBar = \\rCode$, $\\tBar = \\tCode$, and $\\Mbar = \\MCode$, which fixes all the quantities. This comes at a cost the $\\bar{M}_{\\rm ADM}$ is not something nice like 1 or 2, but the choice is consistent."
    ]
   },
   {
