Finished writing .c and .ccl files for the FM ID ETK thorn.

--- a/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
+++ b/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
@@ -45,6 +45,9 @@
     "par.set_parval_from_str(\"grid::GridFuncMemAccess\",\"ETK\")\n",
     "par.set_parval_from_str(\"grid::DIM\", 3)\n",
     "DIM = par.parval_from_str(\"grid::DIM\")\n",
+    "# Force outputC::outCverbose to be false for this module to avoid gigantic C files\n",
+    "# filled with the non-CSE expressions for the Weyl scalars.\n",
+    "par.set_parval_from_str(\"outputC::outCverbose\",False)\n",
     "\n",
     "# Step 1c: Call the FishboneMoncriefID() function from within the\n",
     "#          FishboneMoncriefID/FishboneMoncriefID.py module.\n",
@@ -62,18 +65,7 @@
     "\n",
     "# Step 3: Set up the Fishbone-Moncrief initial data. This sets all the ID gridfunctions.\n",
     "fmid.FishboneMoncriefID()\n",
-    "# betaU = ixp.zerorank1()\n",
     "Valencia3velocityU = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"Valencia3velocityU\")\n",
-    "# gammaDD = ixp.zerorank2()\n",
-    "# KDD = ixp.zerorank2()\n",
-    "\n",
-    "# alpha = fmid.IDalpha\n",
-    "# for i in range(DIM):\n",
-    "#     betaU[i] = fmid.IDbetaU[i]\n",
-    "#     Valencia3velocityU = fmid.IDValencia3velocityU[i]\n",
-    "#     for j in range(DIM):\n",
-    "#         gammaDD[i][j] = fmid.IDgammaDD[i][j]\n",
-    "#         KDD[i][j] = fmid.IDKDD[i][j]\n",
     "\n",
     "# -={ Spacetime quantities: Generate C code from expressions and output to file }=-\n",
     "KerrSchild_to_print = [\\\n",
@@ -130,7 +122,7 @@
     "with open(\"FishboneMoncriefID/src/FMdisk_GRHD_velocities.h\", \"w\") as file:\n",
     "    file.write(str(FMdisk_GRHD_velocities_looped))\n",
     "    \n",
-    "with open(\"FishboneMoncriefID/src/FMdisk_GRHD_velocities.h\", \"w\") as file:\n",
+    "with open(\"FishboneMoncriefID/src/FMdisk_GRHD_hm1.h\", \"w\") as file:\n",
     "    file.write(str(FMdisk_GRHD_hm1_looped))\n"
    ]
   },
@@ -147,9 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting FishboneMoncriefID/src/InitialData.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile FishboneMoncriefID/src/InitialData.c\n",
     "#include <math.h>\n",
@@ -159,13 +159,39 @@
     "#include \"cctk_Parameters.h\"\n",
     "#include \"cctk_Arguments.h\"\n",
     "\n",
-    "void set_FishboneMoncriefID(const cGH* restrict const cctkGH,const int *cctk_lsh,\n",
-    "                            const CCTK_REAL *xGF,const CCTK_REAL *yGF,const CCTK_REAL *zGF,\n",
-    "                            CCTK_REAL *gammaDD00GF,CCTK_REAL *gammaDD01GF,CCTK_REAL *gammaDD02GF,CCTK_REAL *gammaDD11GF,CCTK_REAL *gammaDD12GF,CCTK_REAL *gammaDD22GF,\n",
-    "                            CCTK_REAL     *kDD00GF,CCTK_REAL     *kDD01GF,CCTK_REAL     *kDD02GF,CCTK_REAL     *kDD11GF,CCTK_REAL     *kDD12GF,CCTK_REAL     *kDD22GF,\n",
-    "                            CCTK_REAL *hm1GF, CCTK_REAL *Valencia3velocityU0GF, CCTK_REAL *Valencia3velocityU1GF, CCTK_REAL *Valencia3velocityU2GF)\n",
+    "void FishboneMoncrief_KerrSchild(const cGH* restrict const cctkGH,const int *cctk_lsh,\n",
+    "                                 const CCTK_REAL *xGF,const CCTK_REAL *yGF,const CCTK_REAL *zGF,\n",
+    "                                 CCTK_REAL *alphaGF,CCTK_REAL *betaU0GF,CCTK_REAL *betaU1GF,CCTK_REAL *betaU2GF\n",
+    "                                 CCTK_REAL *gammaDD00GF,CCTK_REAL *gammaDD01GF,CCTK_REAL *gammaDD02GF,CCTK_REAL *gammaDD11GF,CCTK_REAL *gammaDD12GF,CCTK_REAL *gammaDD22GF,\n",
+    "                                 CCTK_REAL     *KDD00GF,CCTK_REAL     *KDD01GF,CCTK_REAL     *KDD02GF,CCTK_REAL     *KDD11GF,CCTK_REAL     *KDD12GF,CCTK_REAL     *KDD22GF)\n",
     "{\n",
+    "  \n",
     "  DECLARE_CCTK_PARAMETERS\n",
+    "  \n",
+    "#include KerrSchild.h\n",
+    "  \n",
+    "}\n",
+    "\n",
+    "void FishboneMoncrief_FMdisk_GRHD_velocities(const cGH* restrict const cctkGH,const int *cctk_lsh,\n",
+    "                                             const CCTK_REAL *xGF,const CCTK_REAL *yGF,const CCTK_REAL *zGF,\n",
+    "                                             CCTK_REAL *Valencia3velocityU0GF, CCTK_REAL *Valencia3velocityU1GF, CCTK_REAL *Valencia3velocityU2GF)\n",
+    "{\n",
+    "  \n",
+    "  DECLARE_CCTK_PARAMETERS\n",
+    "  \n",
+    "#include FMdisk_GRHD_velocities.h\n",
+    "  \n",
+    "}\n",
+    "\n",
+    "void FishboneMoncrief_FMdisk_GRHD_hm1(const cGH* restrict const cctkGH,const int *cctk_lsh,\n",
+    "                                      const CCTK_REAL *xGF,const CCTK_REAL *yGF,const CCTK_REAL *zGF,\n",
+    "                                      CCTK_REAL *hm1GF)\n",
+    "{\n",
+    "  \n",
+    "  DECLARE_CCTK_PARAMETERS\n",
+    "  \n",
+    "#include FMdisk_GRHD_hm1.h\n",
+    "  \n",
     "}\n",
     "\n",
     "void FishboneMoncrief_MainFunction(CCTK_ARGUMENTS)\n",
@@ -173,11 +199,216 @@
     "  DECLARE_CCTK_ARGUMENTS\n",
     "  DECLARE_CCTK_PARAMETERS\n",
     "  \n",
-    "  const CCTK_REAL *xGF = x;\n",
-    "  const CCTK_REAL *yGF = y;\n",
-    "  const CCTK_REAL *zGF = z;\n",
-    "#include \"Maxwell_ID.h\"\n",
+    "  FishboneMoncrief_KerrSchild(cctkGH,cctk_lsh,\n",
+    "                              x,y,z,\n",
+    "                              alp,betax,betay,betaz\n",
+    "                              gxx,gxy,gxz,gyy,gyz,gzz,\n",
+    "                              kxx,kxy,kxz,kyy,kyz,kzz);\n",
+    "  \n",
+    "  FishboneMoncrief_FMdisk_GRHD_velocities(cctkGH,cctk_lsh,\n",
+    "                                          x,y,z,\n",
+    "                                          Valencia3velocityU0,Valencia3velocityU1,Valencia3velocityU2);\n",
+    "\n",
+    "  FishboneMoncrief_FMdisk_GRHD_hm1(cctkGH,cctk_lsh,\n",
+    "                                   x,y,z,\n",
+    "                                   hm1);\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 2b: CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
+    "\n",
+    "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
+    "\n",
+    "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns. Specifically, this file governs the interaction between this thorn and others; more information can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). \n",
+    "With \"implements\", we give our thorn its unique name. By \"inheriting\" other thorns, we tell the Toolkit that we will rely on variables that exist and are declared \"public\" within those functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting FishboneMoncriefID/interface.ccl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile FishboneMoncriefID/interface.ccl\n",
+    "implements: FishboneMoncriefID\n",
+    "inherits: admbase grid\n",
+    "\n",
+    "public:\n",
+    "CCTK_REAL FMdisk_GRHD_velocities_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
+    "{\n",
+    "  Valencia3velocityU0,Valencia3velocityU01,Valencia3velocityU2\n",
+    "} \"FMdisk_GRHD_velocities_group\"\n",
+    "\n",
+    "public:\n",
+    "CCTK_REAL FMdisk_GRHD_hm1_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
+    "{\n",
+    "  hm1\n",
+    "} \"FMdisk_GRHD_hm1_group\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. $\\text{param.ccl}$: specifies free parameters within the thorn, enabling them to be set at runtime. It is required to provide allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting FishboneMoncriefID/param.ccl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile FishboneMoncriefID/param.ccl\n",
+    "shares: grid\n",
+    "\n",
+    "USES KEYWORD type\n",
+    "\n",
+    "#[\"r_in\",\"r_at_max_density\",\"a\",\"M\"] A_b, kappa, gamma\n",
+    "restricted:\n",
+    "CCTK_REAL r_in \"Fixes the inner edge of the disk\"\n",
+    "{\n",
+    " 0.0:* :: \"Must be positive\"\n",
+    "} 1.0\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_REAL r_at_max_density \"Position in the disk of maximum density\"\n",
+    "{\n",
+    " 0.0:* :: \"Must be positive\"\n",
+    "} 1.0\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_REAL a \"The spin parameter of the black hole\"\n",
+    "{\n",
+    " -1.0:1.0 :: \"Magnitude must be less than 1.0\"\n",
+    "} 0.5\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_REAL M \"The initial mass of the Kerr black hole\"\n",
+    "{\n",
+    " 0.0:* :: \"Must be positive\"\n",
+    "} 1.0\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_REAL A_b \"Scaling factor for the vector potential\"\n",
+    "{\n",
+    " *:* :: \"\"\n",
+    "} 1.0\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_REAL kappa: \"\"\n",
+    "{\n",
+    " 1.0:2.0 :: \"1<kappa<2\"\n",
+    "} 1.5\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_REAL gamma \"\"\n",
+    "{\n",
+    " 0.0:* :: \"\"\n",
+    "} 1.0\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions. $\\text{schedule.ccl}$'s official documentation may be found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
+    "\n",
+    "We specify here the standardized ETK \"scheduling bins\" in which we want each of our thorn's functions to run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting FishboneMoncriefID/schedule.ccl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile FishboneMoncriefID/schedule.ccl\n",
+    "\n",
+    "schedule FishboneMoncrief_MainFunction at CCTK_INITIAL as FishboneMoncrief_InitialData\n",
+    "{\n",
+    "  STORAGE:       FishboneMoncriefID::FMdisk_GRHD_velocities_group[3]\n",
+    "  STORAGE:       FishboneMoncriefID::FMdisk_GRHD_hm1_group[3]\n",
+    "  LANG:          C\n",
+    "  READS: grid::x(Everywhere)\n",
+    "  READS: grid::y(Everywhere)\n",
+    "  READS: grid::y(Everywhere)\n",
+    "  WRITES: admbase::alp(Everywhere)\n",
+    "  WRITES: admbase::betax(Everywhere)\n",
+    "  WRITES: admbase::betay(Everywhere)\n",
+    "  WRITES: admbase::betaz(Everywhere)\n",
+    "  WRITES: admbase::kxx(Everywhere)\n",
+    "  WRITES: admbase::kxy(Everywhere)\n",
+    "  WRITES: admbase::kxz(Everywhere)\n",
+    "  WRITES: admbase::kyy(Everywhere)\n",
+    "  WRITES: admbase::kyz(Everywhere)\n",
+    "  WRITES: admbase::kzz(Everywhere)\n",
+    "  WRITES: admbase::gxx(Everywhere)\n",
+    "  WRITES: admbase::gxy(Everywhere)\n",
+    "  WRITES: admbase::gxz(Everywhere)\n",
+    "  WRITES: admbase::gyy(Everywhere)\n",
+    "  WRITES: admbase::gyz(Everywhere)\n",
+    "  WRITES: admbase::gzz(Everywhere)\n",
+    "  WRITES: Valencia3velocity0(Everywhere)\n",
+    "  WRITES: Valencia3velocity1(Everywhere)\n",
+    "  WRITES: Valencia3velocity2(Everywhere)\n",
+    "  WRITES: hm1(Everywhere)\n",
+    "} \"Initial data for Fishbone-Moncrief disks\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 2c: Add the C code to the Einstein Toolkit compilation list.\n",
+    "\n",
+    "We will also need $\\text{make.code.defn}$, which indicates the list of files that need to be compiled. This thorn only has the one C file to compile."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting FishboneMoncriefID/src/make.code.defn\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile FishboneMoncriefID/src/make.code.defn\n",
+    "SRCS = InitialData.c"
    ]
   }
  ],
