Minor improvements to the Fishbone-Moncrief ID. The thorn is nearly complete, but still requires some work to properly interface with HydroBase.

--- a/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
+++ b/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
@@ -236,7 +236,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WeylScal4NRPy/interface.ccl\n"
+      "Writing WeylScal4NRPy/interface.ccl\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WeylScal4NRPy/param.ccl\n"
+      "Writing WeylScal4NRPy/param.ccl\n"
      ]
     }
    ],
@@ -339,7 +339,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WeylScal4NRPy/schedule.ccl\n"
+      "Writing WeylScal4NRPy/schedule.ccl\n"
      ]
     }
    ],
@@ -418,7 +418,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WeylScal4NRPy/src/make.code.defn\n"
+      "Writing WeylScal4NRPy/src/make.code.defn\n"
      ]
     }
    ],
