--- a/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
+++ b/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
@@ -161,14 +161,14 @@
     "\n",
     "void FishboneMoncrief_KerrSchild(const cGH* restrict const cctkGH,const int *cctk_lsh,\n",
     "                                 const CCTK_REAL *xGF,const CCTK_REAL *yGF,const CCTK_REAL *zGF,\n",
-    "                                 CCTK_REAL *alphaGF,CCTK_REAL *betaU0GF,CCTK_REAL *betaU1GF,CCTK_REAL *betaU2GF\n",
+    "                                 CCTK_REAL *alphaGF,CCTK_REAL *betaU0GF,CCTK_REAL *betaU1GF,CCTK_REAL *betaU2GF,\n",
     "                                 CCTK_REAL *gammaDD00GF,CCTK_REAL *gammaDD01GF,CCTK_REAL *gammaDD02GF,CCTK_REAL *gammaDD11GF,CCTK_REAL *gammaDD12GF,CCTK_REAL *gammaDD22GF,\n",
     "                                 CCTK_REAL     *KDD00GF,CCTK_REAL     *KDD01GF,CCTK_REAL     *KDD02GF,CCTK_REAL     *KDD11GF,CCTK_REAL     *KDD12GF,CCTK_REAL     *KDD22GF)\n",
     "{\n",
     "  \n",
     "  DECLARE_CCTK_PARAMETERS\n",
     "  \n",
-    "#include KerrSchild.h\n",
+    "#include \"KerrSchild.h\"\n",
     "  \n",
     "}\n",
     "\n",
@@ -179,7 +179,7 @@
     "  \n",
     "  DECLARE_CCTK_PARAMETERS\n",
     "  \n",
-    "#include FMdisk_GRHD_velocities.h\n",
+    "#include \"FMdisk_GRHD_velocities.h\"\n",
     "  \n",
     "}\n",
     "\n",
@@ -190,7 +190,7 @@
     "  \n",
     "  DECLARE_CCTK_PARAMETERS\n",
     "  \n",
-    "#include FMdisk_GRHD_hm1.h\n",
+    "#include \"FMdisk_GRHD_hm1.h\"\n",
     "  \n",
     "}\n",
     "\n",
@@ -201,7 +201,7 @@
     "  \n",
     "  FishboneMoncrief_KerrSchild(cctkGH,cctk_lsh,\n",
     "                              x,y,z,\n",
-    "                              alp,betax,betay,betaz\n",
+    "                              alp,betax,betay,betaz,\n",
     "                              gxx,gxy,gxz,gyy,gyz,gzz,\n",
     "                              kxx,kxy,kxz,kyy,kyz,kzz);\n",
     "  \n",
@@ -243,19 +243,7 @@
    "source": [
     "%%writefile FishboneMoncriefID/interface.ccl\n",
     "implements: FishboneMoncriefID\n",
-    "inherits: admbase grid\n",
-    "\n",
-    "public:\n",
-    "CCTK_REAL FMdisk_GRHD_velocities_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
-    "{\n",
-    "  Valencia3velocityU0,Valencia3velocityU01,Valencia3velocityU2\n",
-    "} \"FMdisk_GRHD_velocities_group\"\n",
-    "\n",
-    "public:\n",
-    "CCTK_REAL FMdisk_GRHD_hm1_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
-    "{\n",
-    "  hm1\n",
-    "} \"FMdisk_GRHD_hm1_group\"\n"
+    "inherits: admbase grid hydrobase\n"
    ]
   },
   {
@@ -267,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -289,22 +277,22 @@
     "CCTK_REAL r_in \"Fixes the inner edge of the disk\"\n",
     "{\n",
     " 0.0:* :: \"Must be positive\"\n",
-    "} 1.0\n",
+    "} 6.0\n",
     "\n",
     "restricted:\n",
-    "CCTK_REAL r_at_max_density \"Position in the disk of maximum density\"\n",
+    "CCTK_REAL r_at_max_density \"Radius at maximum disk density. Needs to be > r_in\"\n",
     "{\n",
     " 0.0:* :: \"Must be positive\"\n",
-    "} 1.0\n",
+    "} 12.0\n",
     "\n",
     "restricted:\n",
     "CCTK_REAL a \"The spin parameter of the black hole\"\n",
     "{\n",
-    " -1.0:1.0 :: \"Magnitude must be less than 1.0\"\n",
-    "} 0.5\n",
+    " -1.0:1.0 :: \"Positive values, up to 1. Negative disallowed, as certain roots are chosen in the hydro fields setup. Check those before enabling negative spins!\"\n",
+    "} 0.9375\n",
     "\n",
     "restricted:\n",
-    "CCTK_REAL M \"The initial mass of the Kerr black hole\"\n",
+    "CCTK_REAL M \"Kerr-Schild BH mass. Probably should always set M=1.\"\n",
     "{\n",
     " 0.0:* :: \"Must be positive\"\n",
     "} 1.0\n",
@@ -316,16 +304,16 @@
     "} 1.0\n",
     "\n",
     "restricted:\n",
-    "CCTK_REAL kappa: \"\"\n",
+    "CCTK_REAL kappa \"Equation of state: P = kappa * rho^gamma\"\n",
     "{\n",
-    " 1.0:2.0 :: \"1<kappa<2\"\n",
-    "} 1.5\n",
+    " 0.0:* :: \"Positive values\"\n",
+    "} 1.0e-3\n",
     "\n",
     "restricted:\n",
-    "CCTK_REAL gamma \"\"\n",
+    "CCTK_REAL gamma \"Equation of state: P = kappa * rho^gamma\"\n",
     "{\n",
-    " 0.0:* :: \"\"\n",
-    "} 1.0\n"
+    " 0.0:* :: \"Positive values\"\n",
+    "} 1.3333333333333333333333333333\n"
    ]
   },
   {
