Fishbone-Moncrief now compiles and sets the correct HydroBase variables.

--- a/Tutorial-FishboneMoncriefID.ipynb
+++ b/Tutorial-FishboneMoncriefID.ipynb
@@ -186,7 +186,6 @@
     "# Term 6 of Eq 3.6\n",
     "mln_h_in += 2*a*M*r_in*l/Ain\n",
     "\n",
-    "hm1 = gri.register_gridfunctions(\"AUX\",\"hm1\")\n",
     "hm1 = sp.exp(ln_h + mln_h_in) - 1\n"
    ]
   },
@@ -708,7 +707,7 @@
     "#fin.FD_outputC(\"stdout\",FMdisk_Lorentz_uUs_CKernel)\n",
     "\n",
     "FMdisk_hm1_rho_P_CKernel = [\\\n",
-    "                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"hm1\"),rhs=hm1),\\\n",
+    "#                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"hm1\"),rhs=hm1),\\\n",
     "                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"rho0\"),rhs=rho0),\\\n",
     "                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"Pressure0\"),rhs=Pressure0),\\\n",
     "                           ]\n",
@@ -848,7 +847,7 @@
     "                     ]\n",
     "\n",
     "# -={ GRMHD quantities: Generate C code from expressions and output to file }=-\n",
-    "FMdisk_GRHD_hm1_to_print = [lhrh(lhs=gri.gfaccess(\"out_gfs\",\"hm1\"),rhs=hm1)]\n",
+    "FMdisk_GRHD_hm1_to_print = [lhrh(lhs=gri.gfaccess(\"out_gfs\",\"rho0\"),rhs=rho0)]\n",
     "\n",
     "FMdisk_GRHD_velocities_to_print = [\\\n",
     "                                 lhrh(lhs=gri.gfaccess(\"out_gfs\",\"IDValencia3velocityU0\"),rhs=IDValencia3velocityU[0]),\\\n",
@@ -973,6 +972,7 @@
       "^^^ Ignore the minor warning above. ^^^\n",
       "\n",
       "IDalpha - fmid.IDalpha = 0\n",
+      "rho0 - fmid.rho0 = 0\n",
       "hm1 - fmid.hm1 = 0\n",
       "IDbetaU[0] - fmid.IDbetaU[0] = 0\n",
       "IDValencia3velocityU[0] - fmid.IDValencia3velocityU[0] = 0\n",
@@ -1012,6 +1012,7 @@
     "print(\"^^^ Ignore the minor warning above. ^^^\\n\")\n",
     "\n",
     "print(\"IDalpha - fmid.IDalpha = \" + str(IDalpha - fmid.IDalpha))\n",
+    "print(\"rho0 - fmid.rho0 = \" + str(rho0 - fmid.rho0))\n",
     "print(\"hm1 - fmid.hm1 = \" + str(hm1 - fmid.hm1))\n",
     "\n",
     "for i in range(DIM):\n",
