--- a/Tutorial-smallb2_Poynting_vector-Cartesian.ipynb
+++ b/Tutorial-smallb2_Poynting_vector-Cartesian.ipynb
@@ -231,20 +231,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'u0' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-e724474e007e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDIM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDIM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0muD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mu0\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mgammaDD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mValenciavU\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'u0' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "u0 = par.Cparameters(\"REAL\",thismodule,\"u0\")\n",
     "uD = ixp.zerorank1()\n",
     "\n",
     "for i in range(DIM):\n",
@@ -263,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,6 +263,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Step 5: Compute $\\beta^\\mu$ from above expressions.\n",
+    "\n",
     "\\begin{align}\n",
     "\\sqrt{4\\pi} b^0 = B^0_{\\rm (u)} &= \\frac{u_j B^j}{\\alpha} \\\\\n",
     "\\sqrt{4\\pi} b^i = B^i_{\\rm (u)} &= \\frac{B^i + (u_j B^j) u^i}{\\alpha u^0}\\\\\n",
@@ -283,7 +274,44 @@
     "\n",
     "$$B^i = \\frac{\\tilde{B}^i}{\\gamma},$$\n",
     "\n",
-    "where $\\gamma$ is the determinant of the spatial 3-metric."
+    "where $\\gamma$ is the determinant of the spatial 3-metric.\n",
+    "\n",
+    "Pulling this together, we currently have available as input:\n",
+    "+ $\\tilde{B}^i$\n",
+    "+ $\\gamma$\n",
+    "+ $u_j$\n",
+    "+ $u^0$,\n",
+    "\n",
+    "with the goal of outputting now $b^\\mu$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M_PI = par.Cparameters(\"REAL\",thismodule,\"M_PI\")\n",
+    "BtildeU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BtildeU\",DIM=3)\n",
+    "\n",
+    "BU = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    BU[i] = BtildeU[i]/gammaDET\n",
+    "\n",
+    "# uBcontraction = u_i B^i\n",
+    "uBcontraction = sp.sympify(0)\n",
+    "for i in range(DIM):\n",
+    "    uBcontraction += uD[i]*BU[i]\n",
+    "\n",
+    "# uU = 3-vector representing u^i = u^0 \\left(\\alpha v^i_{(n)} - \\beta^i\\right)\n",
+    "uU = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    uU[i] = u0*(alpha*ValenciavU[i] - betaU[i])\n",
+    "\n",
+    "smallbU = ixp.zerorank1(DIM=4)\n",
+    "smallbU[0] = uBcontraction/(alpha*sp.sqrt(4*M_PI))\n",
+    "for i in range(DIM):\n",
+    "    smallbU[1+i] = (BU[i] + uBcontraction*uU[i])/(alpha*u0*sp.sqrt(4*M_PI))"
    ]
   },
   {
@@ -359,13 +387,6 @@
     "\n",
     "which is equivalent to Eq. 56 in [Duez *et al* (2005)](https://arxiv.org/pdf/astro-ph/0503420.pdf). Notice in the last step, we used the above definition of $u^0$."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
