Tutorial-u0_smallb-Cartesian: Should really add Poynting to this, to avoid duplication

--- a/Tutorial-u0_smallb-Cartesian.ipynb
+++ b/Tutorial-u0_smallb-Cartesian.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Computing $b^{\\mu}$\n",
+    "## Computing $u^0$ and $b^{\\mu}$\n",
     "\n",
     "First some definitions. The spatial components of $b^{\\mu}$ are simply the magnetic field as measured by an observer comoving with the plasma $B^{\\mu}_{\\rm (u)}$, divided by $\\sqrt{4\\pi}$. In addition, in the ideal MHD limit, $B^{\\mu}_{\\rm (u)}$ is orthogonal to the plasma 4-velocity $u^\\mu$, which sets the $\\mu=0$ component. \n",
     "\n",
@@ -282,7 +282,7 @@
     "+ $u_j$\n",
     "+ $u^0$,\n",
     "\n",
-    "with the goal of outputting now $b^\\mu$"
+    "with the goal of outputting now $b^\\mu$ and $b^2$:"
    ]
   },
   {
@@ -312,6 +312,55 @@
     "smallbU[0] = uBcontraction/(alpha*sp.sqrt(4*M_PI))\n",
     "for i in range(DIM):\n",
     "    smallbU[1+i] = (BU[i] + uBcontraction*uU[i])/(alpha*u0*sp.sqrt(4*M_PI))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Computing the Poynting Flux Vector $S^{i}$\n",
+    "\n",
+    "The Poynting flux is defined in Eq. 11 of [Kelly *et al*](https://arxiv.org/pdf/1710.02132.pdf):\n",
+    "\n",
+    "$$\n",
+    "S^i = \\alpha T^i_{\\rm EM\\ 0} = \\alpha\\left(b^2 u^i u_0 + \\frac{1}{2} b^2 g^i{}_0 - b^i b_0\\right)\n",
+    "$$\n",
+    "\n",
+    "We have already computed all of these quantities above, except $g^i{}_0$ so let's now construct this object:\n",
+    "\n",
+    "$$\n",
+    "g^i{}_0 = g^{i\\nu} g_{\\nu 0},\n",
+    "$$\n",
+    "which itself requires $g^{i\\nu}$ be defined:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g4UD = ixp.zerorank2(DIM=4)\n",
+    "\n",
+    "\n",
+    "\n",
+    "PoynSU = ixp.zerorank1()\n",
+    "\n",
+    "# First compute b_{\\mu}\n",
+    "smallbD = ixp.zerorank1(DIM=4)\n",
+    "for mu in range(4):\n",
+    "    for nu in range(4):\n",
+    "        smallbD[mu] += g4DD[mu][nu]*smallbU[nu]\n",
+    "\n",
+    "smallb2 = sp.sympify(0)\n",
+    "for mu in range(4):\n",
+    "    smallb2 += smallbU[mu]*smallbD[mu]\n",
+    "\n"
    ]
   },
   {
