--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -89,6 +89,7 @@
    "source": [
     "# Step 2: Build the four metric\n",
     "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\",DIM=3)\n",
+    "dummygammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)\n",
     "betaU   = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"betaU\",DIM=3)\n",
     "alpha   = gri.register_gridfunctions(\"AUX\",\"alpha\")\n",
     "\n",
@@ -176,11 +177,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that the metric and its derivatives are out of the way, we will return our attention to the electromagnetic stress-energy tensor\n",
+    "$$T^{\\mu \\nu}_{\\rm EM} = b^2 u^{\\mu} u^{\\nu} + \\frac{b^2}{2} g^{\\mu \\nu} - b^{\\mu} b^{\\nu}.$$\n",
+    "We will need the four-velocity $u^\\mu$, where \n",
+    "\\begin{align}\n",
+    "u^i &= u^0 (\\alpha v^i_{(n)} - \\beta^i), \\\\\n",
+    "u_j &= \\alpha u^0 \\gamma_{ij} v^i_{(n)}, \\\\\n",
+    "\\end{align}\n",
+    "and $v^i_{(n)}$ is the Valencia three-velocity. The values of $u^0$ and $v^i_{(n)}$ can be read from HydroBase and IllinoisGRMHD.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\",DIM=3)\n",
+    "\n",
+    "u0 = par.Cparameters(\"REAL\",thismodule,\"u0\")\n",
+    "uD = ixp.zerorank1()\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        uD[j] += alpha*u0*gammaDD[i][j]*ValenciavU[j]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also need the vector $b^{\\mu}$ before we can compute this, which is related to the magnetic field by \n",
+    "\\begin{align}\n",
+    "b^0 &= \\frac{1}{\\sqrt{4\\pi}} B^0_{\\rm (u)} = \\frac{u_j B^j}{\\sqrt{4\\pi}\\alpha}, \\\\\n",
+    "b^i &= \\frac{1}{\\sqrt{4\\pi}} B^i_{\\rm (u)} = \\frac{B^i + (u_j B^j) u^i}{\\sqrt{4\\pi}\\alpha u^0}, \\\\\n",
+    "\\end{align} and \\begin{align}\n",
+    "B^i &= \\frac{\\tilde{B}^i}{\\gamma},\n",
+    "\\end{align}\n",
+    "where $\\tilde{B}^i$ is the variable tracked by the HydroBase thorn in the Einstein Toolkit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#M_PI = par.Cparameters(\"REAL\",thismodule,\"M_PI\")\n",
+    "M_PI = sp.pi\n",
+    "BtildeU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BtildeU\",DIM=3)\n",
+    "\n",
+    "BU = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    BU[i] = BtildeU[i]/gammaDET\n",
+    "\n",
+    "# uBcontraction = u_i B^i\n",
+    "uBcontraction = sp.sympify(0)\n",
+    "for i in range(DIM):\n",
+    "    uBcontraction += uD[i]*BU[i]\n",
+    "\n",
+    "# uU = 3-vector representing u^i = u^0 \\left(\\alpha v^i_{(n)} - \\beta^i\\right)\n",
+    "uU = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    uU[i] = u0*(alpha*ValenciavU[i] - betaU[i])\n",
+    "\n",
+    "smallbU = ixp.zerorank1(DIM=4)\n",
+    "smallbU[0] = uBcontraction/(alpha*sp.sqrt(4*M_PI))\n",
+    "for i in range(DIM):\n",
+    "    smallbU[1+i] = (BU[i] + uBcontraction*uU[i])/(alpha*u0*sp.sqrt(4*M_PI))\n",
+    "    \n",
+    "smallbD = ixp.zerorank1(DIM=4)\n",
+    "for i in range(4):\n",
+    "    for j in range(4):\n",
+    "        smallbD[i] += g4DD[i][j]*smallbU[j]\n",
+    "\n",
+    "smallb2 = sp.sympify(0)\n",
+    "for i in range(4):\n",
+    "    smallb2 += smallbU[i]*smallbD[i]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now have all the pieces to calculate the stress-energy tensor,\n",
+    "$$T^{\\mu \\nu}_{\\rm EM} = b^2 u^{\\mu} u^{\\nu} + \\frac{b^2}{2} g^{\\mu \\nu} - b^{\\mu} b^{\\nu}.$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEMUU = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"TEMUU\",\"sym01\",DIM=4)\n",
+    "\n",
+    "TEMUU[0][0] = smallb2*u0*u0 + smallb2*g4DD[0][0]/2 - smallbU[0]*smallbU[0]\n",
+    "for mu in range(1,4):\n",
+    "    TEMUU[mu][0] = TEMUU[0][mu] = smallb2*uU[mu-1]*u0 + smallb2*g4DD[mu][0]/2 - smallbU[mu]*smallbU[0]\n",
+    "for mu in range(1,4):\n",
+    "    for nu in range(1,4):\n",
+    "        TEMUU[mu][nu] = smallb2*uU[mu-1]*uU[nu-1] + smallb2*g4DD[mu][nu]/2 - smallbU[mu]*smallbU[nu]"
+   ]
   }
  ],
  "metadata": {
