GiRaFFE tut: Add comment for Patrick

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -146,6 +146,9 @@
     "\n",
     "# Step 3b: These derivatives will be constructed analytically.\n",
     "betaDdD    = ixp.zerorank2()\n",
+    "\n",
+    "# Zach says: Just set this up as a rank3 tensor with DIM=4. We'll not set the time deriv. \n",
+    "#  This will get rid of a lot of unnecessary code below.\n",
     "g4DDd0     = ixp.zerorank2(DIM=4)\n",
     "g4DDd1     = ixp.zerorank2(DIM=4)\n",
     "g4DDd2     = ixp.zerorank2(DIM=4)\n",
