Tutorial-u0_smallb_Poynting: Finish first draft.

--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dummygammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)"
+    "gammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)"
    ]
   },
   {
@@ -326,18 +326,22 @@
     "S^i = \\alpha T^i_{\\rm EM\\ 0} = \\alpha\\left(b^2 u^i u_0 + \\frac{1}{2} b^2 g^i{}_0 - b^i b_0\\right)\n",
     "$$\n",
     "\n",
+    "## Step 1: Computing $g^{i\\nu}$:\n",
     "We have already computed all of these quantities above, except $g^i{}_0$ so let's now construct this object:\n",
     "\n",
     "$$\n",
     "g^i{}_0 = g^{i\\nu} g_{\\nu 0},\n",
     "$$\n",
-    "which itself requires $g^{i\\nu}$ be defined:"
+    "which itself requires $g^{i\\nu}$ be defined (Eq. 4.49 in [Gourgoulhon](https://arxiv.org/pdf/gr-qc/0703035.pdf)):\n",
+    "$$\n",
+    "g^{\\mu\\nu} = \\begin{pmatrix} \n",
+    "-\\frac{1}{\\alpha^2} & \\frac{\\beta^i}{\\alpha^2} \\\\\n",
+    "\\frac{\\beta^i}{\\alpha^2} & \\gamma^{ij} - \\frac{\\beta^i\\beta^j}{\\alpha^2}\n",
+    "\\end{pmatrix},\n",
+    "$$\n",
+    "\n",
+    "where $\\gamma^{ij}$ was defined above where we computed $\\text{gammaDET}$."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -345,22 +349,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "g4UU = ixp.zerorank2(DIM=4)\n",
+    "\n",
+    "g4UU[0][0] = -1 / alpha**2\n",
+    "for i in range(3):\n",
+    "    g4UU[0][i+1] = g4UU[i+1][0] = betaU[i]/alpha**2\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        g4UU[i+1][j+1] = g4UU[j+1][i+1] = gammaUU[i][j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2: Computing $S^{i}$\n",
+    "\n",
+    "We start by computing \n",
+    "$$\n",
+    "g^\\mu{}_\\delta = g^{\\mu\\nu} g_{\\nu \\delta},\n",
+    "$$\n",
+    "and then the rest of the Poynting flux vector can be immediately computed from quantities defined above:\n",
+    "$$\n",
+    "S^i = \\alpha T^i_{\\rm EM\\ 0} = \\alpha\\left(b^2 u^i u_0 + \\frac{1}{2} b^2 g^i{}_0 - b^i b_0\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2a: compute g^\\mu_\\delta:\n",
     "g4UD = ixp.zerorank2(DIM=4)\n",
+    "for mu in range(4):\n",
+    "    for delta in range(4):\n",
+    "        for nu in range(4):\n",
+    "            g4UD[mu][delta] += g4UU[mu][nu]*g4DD[nu][delta]\n",
     "\n",
-    "\n",
-    "\n",
-    "PoynSU = ixp.zerorank1()\n",
-    "\n",
-    "# First compute b_{\\mu}\n",
+    "# Step 2b: compute b_{\\mu}\n",
     "smallbD = ixp.zerorank1(DIM=4)\n",
     "for mu in range(4):\n",
     "    for nu in range(4):\n",
     "        smallbD[mu] += g4DD[mu][nu]*smallbU[nu]\n",
     "\n",
+    "# Step 2c: compute u_0 = g_{mu 0} u^{mu} = g4DD[0][0]*u0 + g4DD[i][0]*uU[i]\n",
+    "u_0 = g4DD[0][0]*u0\n",
+    "for i in range(DIM):\n",
+    "    u_0 += g4DD[i][0]*uU[i]\n",
+    "        \n",
+    "# Step 2d: compute b^2\n",
     "smallb2 = sp.sympify(0)\n",
     "for mu in range(4):\n",
     "    smallb2 += smallbU[mu]*smallbD[mu]\n",
-    "\n"
+    "\n",
+    "# Step 2d: compute S^i\n",
+    "PoynSU = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    PoynSU[i] = alpha* (smallb2*uU[i]*u_0 + sp.Rational(1,2)*smallb2*g4UD[i][0] - smallbU[i]*smallbD[0])"
    ]
   },
   {
