--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Computing $u^0$ and $b^{\\mu}$\n",
+    "# Computing $u^0$, $b^{\\mu}$, and the Poynting Vector $S^i$\n",
+    "\n",
+    "## Part 1 of 2: Computing $u^0$ and $b^{\\mu}$\n",
     "\n",
     "First some definitions. The spatial components of $b^{\\mu}$ are simply the magnetic field as measured by an observer comoving with the plasma $B^{\\mu}_{\\rm (u)}$, divided by $\\sqrt{4\\pi}$. In addition, in the ideal MHD limit, $B^{\\mu}_{\\rm (u)}$ is orthogonal to the plasma 4-velocity $u^\\mu$, which sets the $\\mu=0$ component. \n",
     "\n",
@@ -318,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Computing the Poynting Flux Vector $S^{i}$\n",
+    "## Part 2 of 2: Computing the Poynting Flux Vector $S^{i}$\n",
     "\n",
     "The Poynting flux is defined in Eq. 11 of [Kelly *et al*](https://arxiv.org/pdf/1710.02132.pdf):\n",
     "\n",
@@ -326,7 +328,7 @@
     "S^i = \\alpha T^i_{\\rm EM\\ 0} = \\alpha\\left(b^2 u^i u_0 + \\frac{1}{2} b^2 g^i{}_0 - b^i b_0\\right)\n",
     "$$\n",
     "\n",
-    "## Step 1: Computing $g^{i\\nu}$:\n",
+    "## Part 2, Step 1: Computing $g^{i\\nu}$:\n",
     "We have already computed all of these quantities above, except $g^i{}_0$ so let's now construct this object:\n",
     "\n",
     "$$\n",
@@ -363,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: Computing $S^{i}$\n",
+    "## Part 2, Step 2: Computing $S^{i}$\n",
     "\n",
     "We start by computing \n",
     "$$\n",
@@ -416,7 +418,7 @@
    "source": [
     "## Appendix: Proving Eqs. 53 and 56 in [Duez *et al* (2005)](https://arxiv.org/pdf/astro-ph/0503420.pdf)\n",
     "\n",
-    "Thus $u^\\mu u_\\mu = -1$ implies\n",
+    "$u^\\mu u_\\mu = -1$ implies\n",
     "\n",
     "\\begin{align}\n",
     "g^{\\mu\\nu} u_\\mu u_\\nu &= g^{00} \\left(u_0\\right)^2 + 2 g^{0i} u_0 u_i + g^{ij} u_i u_j = -1 \\\\\n",
