--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -310,10 +310,10 @@
     "for i in range(DIM):\n",
     "    uU[i] = u0*(alpha*ValenciavU[i] - betaU[i])\n",
     "\n",
-    "smallbU = ixp.zerorank1(DIM=4)\n",
-    "smallbU[0] = uBcontraction/(alpha*sp.sqrt(4*M_PI))\n",
+    "smallb4U = ixp.zerorank1(DIM=4)\n",
+    "smallb4U[0] = uBcontraction/(alpha*sp.sqrt(4*M_PI))\n",
     "for i in range(DIM):\n",
-    "    smallbU[1+i] = (BU[i] + uBcontraction*uU[i])/(alpha*u0*sp.sqrt(4*M_PI))"
+    "    smallb4U[1+i] = (BU[i] + uBcontraction*uU[i])/(alpha*u0*sp.sqrt(4*M_PI))"
    ]
   },
   {
@@ -394,7 +394,7 @@
     "smallb4D = ixp.zerorank1(DIM=4)\n",
     "for mu in range(4):\n",
     "    for nu in range(4):\n",
-    "        smallb4D[mu] += g4DD[mu][nu]*smallbU[nu]\n",
+    "        smallb4D[mu] += g4DD[mu][nu]*smallb4U[nu]\n",
     "\n",
     "# Step 2c: compute u_0 = g_{mu 0} u^{mu} = g4DD[0][0]*u0 + g4DD[i][0]*uU[i]\n",
     "u_0 = g4DD[0][0]*u0\n",
@@ -409,7 +409,7 @@
     "# Step 2d: compute S^i\n",
     "PoynSU = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
-    "    PoynSU[i] = alpha* (smallb2*uU[i]*u_0 + sp.Rational(1,2)*smallb2*g4UD[i][0] - smallb4U[i]*smallb4D[0])"
+    "    PoynSU[i] = alpha * (smallb2*uU[i]*u_0 + sp.Rational(1,2)*smallb2*g4UD[i+1][0] - smallb4U[i+1]*smallb4D[0])"
    ]
   },
   {
