--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -416,6 +416,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### NRPy+ Module Code Validation\n",
+    "\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for u0, smallbU, smallb2, and PoynSU between\n",
+    "1. this tutorial and \n",
+    "2. the NRPy+ u0_smallb_Poynting__Cartesian module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vvv Ignore the minor warning below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::GAMMA_SPEED_LIMIT\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::u0\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n",
+      "^^^ Ignore the minor warning above. ^^^\n",
+      "\n",
+      "u0 C code matches!\n",
+      "smallb4v2U[0] - smallb4U[0] = 0\n",
+      "smallb4v2U[1] - smallb4U[1] = 0\n",
+      "smallb4v2U[2] - smallb4U[2] = 0\n",
+      "smallb4v2U[3] - smallb4U[3] = 0\n",
+      "smallb4v2squared - smallb2 = 0\n",
+      "PoynSv2U[0] - PoynSU[0] = 0\n",
+      "PoynSv2U[1] - PoynSU[1] = 0\n",
+      "PoynSv2U[2] - PoynSU[2] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"vvv Ignore the minor warning below. vvv\")\n",
+    "\n",
+    "import u0_smallb_Poynting__Cartesian.u0_smallb_Poynting__Cartesian as u0etc\n",
+    "u0_Ccode,smallb4v2U,smallb4v2squared,PoynSv2U = u0etc.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,ValenciavU,BtildeU)\n",
+    "\n",
+    "print(\"^^^ Ignore the minor warning above. ^^^\\n\")\n",
+    "\n",
+    "if u0_Ccode != computeu0_Cfunction:\n",
+    "    print(\"Error. u0 C code has changed!\")\n",
+    "    exit(1)\n",
+    "else:\n",
+    "    print(\"u0 C code matches!\")\n",
+    "\n",
+    "for i in range(4):\n",
+    "    print(\"smallb4v2U[\"+str(i)+\"] - smallb4U[\"+str(i)+\"] = \" \n",
+    "              + str(smallb4v2U[i]-smallb4U[i]))\n",
+    "\n",
+    "print(\"smallb4v2squared - smallb2 = \" + str(smallb4v2squared-smallb2))\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    print(\"PoynSv2U[\"+str(i)+\"] - PoynSU[\"+str(i)+\"] = \" \n",
+    "              + str(PoynSv2U[i]-PoynSU[i]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Appendix: Proving Eqs. 53 and 56 in [Duez *et al* (2005)](https://arxiv.org/pdf/astro-ph/0503420.pdf)\n",
     "\n",
     "$u^\\mu u_\\mu = -1$ implies\n",
