Link u0_smallb_Poynting tutorial from main page. Also add a couple disclaimers about module validation

--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computing $u^0$, $b^{\\mu}$, and the Poynting Vector $S^i$\n",
+    "# Computing the 4-Velocity Time-Component $u^0$, the Magnetic Field Measured by a Comoving Observer $b^{\\mu}$, and the Poynting Vector $S^i$\n",
+    "\n",
+    "<font color='red'>**Warning: These have not yet been validated against a trusted code.**</font>\n",
     "\n",
     "## Part 1 of 2: Computing $u^0$ and $b^{\\mu}$\n",
     "\n",
